[SC-11539] fixed whitespace before title, updated position of column chooser

--- a/src/shared/common/styles/dx-customs.less
+++ b/src/shared/common/styles/dx-customs.less
@@ -616,3 +616,10 @@ input.form-control {
 .dx-texteditor.dx-editor-outlined {
     border: none;
 }
+
+.dx-datagrid-column-chooser {
+    .dx-popup-normal {
+        left: 100% !important;
+        transform: translateX(-100%) !important;
+    }
+}
